syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/QingYunTasha/go-Chatting/internal/app/msg_queue/delivery";

package delivery;


service MessageQueue {
    rpc PublishMessage(stream Message) returns (google.protobuf.Empty) {}
    rpc ConsumeMessage(google.protobuf.Empty) returns (stream Message) {}
}

message Message {
    uint32 ID = 1;
    uint32 SenderID = 2;
    uint32 GroupID = 3;
    google.protobuf.Timestamp Timestamp = 4;
    string Content = 5;
}
